# slidmk

./: .gitignore  Cargo.toml  README.md  example.present  syntax.ebnf
example/: introduction.present  style.hjson  template.hjson
src/: cli_args.rs  main.rs
src/config/: de_se.rs  default.rs  mod.rs  primitives.rs
src/drawing/: error.rs  mod.rs  pdf_maker.rs
src/parser/: combinators.rs  iterexts.rs  lexer.rs  mod.rs  parse_error.rs  slide.rs  slides.rs  tokens.rs
src/util/: advancer.rs  buff_container.rs  iterext.rs  macros.rs  mod.rs  pdf_util.rs  peek_n.rs  remove_first.rs
src/util/pdf/: error.rs  mod.rs  util.rs
