[package]
name = "slidmk"
version = "0.1.0"
authors = ["generic <genericgithub@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing
utf8-chars = "1.0.2"

# pdf generation
printpdf = "0.3.2"
rusttype = "0.9.2"
fontconfig = "0.2.1"
arrayvec = "0.7.1"

# config parsing
serde = { version = "1.0.127", features = ["derive"] }
serde-hjson = "0.9.1"
