[package]
name = "slidmk"
version = "0.1.0"
authors = ["generic <genericgithub@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing
utf8-chars = "1.0.2"

# pdf generation
printpdf = "0.3.2"
rusttype = "0.9.2"
fontconfig = "0.2.1"
arrayvec = "0.7.1"

# config parsing
serde = "^0.8.0"
serde_derive = "^0.8.0"
serde-hjson = "0.9.1"
structopt = "0.3.22"
directories = "3.0.2"
